# lowlat-master

./: Cargo.toml  PROJECT.md  README.md  REC_TEST.ndjson
config/: default.toml
data/: md_ticks.csv
recordings/: btcusdt_10m.ndjson  btcusdt_1772035319428.ndjson  btcusdt_2m.ndjson
runs/: backtest_baseline.json  backtest_latency.json  backtest_sweep_small.csv  backtest_sweep_small.json  backtest_sweep_test.csv  backtest_sweep_test.json  backtest_test.json  live_10m_135834.json  live_10m_budget60_141643.json  live_10m_disc10_rest5000_082754.json  live_10m_disc200_rest3000_071204.json  live_10m_disc200_rest3000_190309.json  live_10m_disc300_165536.json  live_10m_disc300_rest1500_173652.json  live_10m_disc300_rest3000_180540.json  live_10m_disc30_rest3000_080309.json  live_10m_disc500_163647.json  live_10m_disc700_150906.json  live_10m_rest_disc200_rest3000_070730.json  live_10m_rest_disc200_rest3000_072251.json  live_10m_rest_disc200_rest3000_191415.json  live_10m_rest_disc200_rest3000_194315.json  live_10m_tighter_143949.json  live_rearm_134603.json  live_rearm_long_134833.json  live_testnet_133246.json  live_testnet_calib3.json  live_testnet_calib3_bigger_spike_budget.json  replay.json  replay_calib1.json  replay_calib2.json  replay_calib3.json  rest.json  ws_api.json
src/: lib.rs  main.rs
src/backtest/: mod.rs
src/config/: mod.rs
src/execution/: mod.rs
src/marketdata/: mod.rs
src/orderbook/: mod.rs
src/risk/: mod.rs
src/strategy/: mod.rs
src/telemetry/: mod.rs
src/util/: mod.rs
