[package]
name = "lowlat_bot"
version = "0.1.0"
edition = "2021"
description = "Low-latency bot scaffold with modular architecture"
license = "MIT"

[features]
default = []
pprof = ["dep:pprof"]

[dependencies]
anyhow = "1"
futures-util = "0.3"
hmac = "0.12"
ordered-float = "4"
pprof = { version = "0.14", default-features = false, features = ["flamegraph"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
